@@ -1,3 +1,8 @@
+2011-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/expm_At.R (expAtv): finally add the functionality for
+	'exp(A*t) %*% v' Ravi had translated from EXPOKIT in August.
+
 2011-08-27  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/expm.R (expm): add new method "PadeRBS" (Roger B. Sidje),
